<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_hashtag" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modo_de_juego" />

            <Spinner
                android:id="@+id/spin_modo_juego"
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nombre_juagor_1" />

            <EditText
                android:id="@+id/textvJugador1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/jugador_1"
                android:inputType="textPersonName"
                android:maxLength="10" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nombre_jugador_2" />

            <EditText
                android:id="@+id/textvJugador2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/jugador_2"
                android:inputType="textPersonName"
                android:maxLength="10" />

            <LinearLayout
                android:id="@+id/linearDificultad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_nivel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nievl_de_dificultad" />

                <Spinner
                    android:id="@+id/spin_nivel_dificultad"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="iniciarJuego"
                android:text="@string/empezar_juego"
                android:textColor="@color/ic_launcher_background" />

            />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
